 * Fix plugin install bugs (PICARD-444)
 * Fix Options / File naming examples to handle primary/secondary release types (PICARD-516)
 * A new advanced option is available to permanently set the starting directory
   for the file browser and "Add files/folder" buttons.
 * Requests to Musicbrainz against your own account e.g. for collections are now handled through SSL (PICARD-337)

Version 1.2 - 2013-03-30
 * Picard now requires at least Python 2.6
 * Removed support for AmpliFIND/PUIDs
 * Add support for the Ogg Opus file format
 * It's now possible to download cover images without any plugin. Cover Art Archive images can be downloaded by image type
 * Improved directory scanning performance
 * Prefer already-loaded releases of the same RG when matching files
 * Allow dropping new files onto specific targets
 * Add basic collections management support (PICARD-84)
 * Allow adding custom tags in the tag editing dialog (PICARD-349)
 * Fix replacing of Windows-incompatible characters (PICARD-393)
 * Save both primary and secondary release types (PICARD-240)
 * Handle errors from the AcoustID service better (PICARD-391)
 * Accept HTTPS URLs on drag-and-drop (PICARD-378)

Version 1.1 - 2012-09-03
 * Always show basic tags in metadata comparison box, even if empty (title,
   artist, album, tracknumber, ~length, date) (PICARD-201)
 * Fixed AcoustID submission failure after removing files from Picard (PICARD-82)
 * Allow multi-select in new MetaDataBox for delete/remove tags (PICARD-194)
 * File browser remembers last directory/no longer crashes on OS X (PICARD-104)
 * Removed the "Run Picard" option from the Windows installer (PICARD-11)
 * Refreshing a non-album track correctly clears previous track metadata (PICARD-220)
 * Fixed the preserved tags setting for tags with uppercase characters (PICARD-217)
 * Added a completion box to the preserved tags setting, and clarified how it works
 * Store lyrics language in tags instead of text representation language (PICARD-242)