@@ -214,7 +214,7 @@ def coverart(album, metadata, release, try_list=None):
                     CAA_HOST, CAA_PORT, "/release/%s/" %
                     metadata["musicbrainz_albumid"],
                     partial(_caa_json_downloaded, album, metadata, release, try_list),
-                    priority=True, important=True)
+                    priority=True, important=False)
         else:
             log.debug("There are no suitable images in the cover art archive for %s"
                               % release.id)
@@ -263,7 +263,7 @@ def _walk_try_list(album, metadata, release, try_list):
                 coverinfos['host'], coverinfos['port'], coverinfos['path'],
                 partial(_coverart_downloaded, album, metadata, release,
                         try_list, coverinfos),
-                priority=True, important=True)
+                priority=True, important=False)
 
 
 def _process_url_relation(try_list, relation):
